--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -68,3 +68,12 @@ button {
 a:focus-visible, button:focus-visible {
     outline: none;
 }
+
+/* Zichtbaarheids instelling */
+.javascriptEnabled .layout-view {
+    display: block;
+}
+
+.visible {
+    visibility: visible;
+}
